Set up NPM repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onelua",
+  "name": "@mousetool/onelua",
   "version": "1.0.8",
   "description": "Lua script merger bringing in the NPM workflow. Compiles multiple Lua scripts into one single script, and enables tracking of remote Lua packages.",
   "main": "onelua.js",
